feat(gui): 홈 화면 도입 및 화면 전환 뼈대(Home/Quiz/Cards) 추가